--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+package-lock.json
+package.json
 
 # TypeScript v1 declaration files
 typings/
